--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 
     <div class="parteFixaCima">
-        <img class="imagembt" src="logo.png">
-        <img class="people" src="people.svg">
+        <img class="logo" src="logo.png">
+        <ion-icon class="icone" name="people"></ion-icon>
     </div>
 
 
-    <div class="parteMovel">
+    <main>
       <ul class="mensagens">
-        <!--<li class="conversa-privada">
+        <!-- <li class="conversa-privada">
           <span class="horario"> 15:26 </span>
           <strong>Samantha </strong>
           <span> reservadamente para </span>
@@ -37,19 +37,18 @@
           <span class="horario"> 15:28 </span>
           <strong> Samantha</strong>
           <span> sai da sala...</span> 
-        </li>
-      -->
+        </li> -->
       </ul>  
-    </div>
+    </main>
 
 
-    <div class="parteFixaBaixa">
-      <input type="text" id="mensagemArea" placeholder="Escreva aqui...">
-      <button onclick="enviarMensagem()"> <img class="iconebaixo" src="icone.png">
-      </button>
-    </div>
+    <footer>
+      <input placeholder="Escreva aqui...">
+      <ion-icon class="icone2" onclick="" name="paper-plane-outline"></ion-icon>
+    </footer>
 
 
+   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
    <script src="script.js"></script>
  </body>
