--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
 
     <footer>
-      <input placeholder="Escreva aqui...">
-      <ion-icon class="icone2" onclick="" name="paper-plane-outline"></ion-icon>
+      <input class="texto-input" placeholder="Escreva aqui...">
+      <button onclick="enviarmensagem()">
+      <ion-icon class="icone2" name="paper-plane-outline"></ion-icon>
+    </button>
     </footer>
 
 
